[tool.poetry]
name = "ca_cdk_constructs"
version = "0.12.0"
description = "Shared CDK constructs"
authors = ["CA"]
homepage = "https://github.com/citizensadvice/ca-cdk-constructs"

[tool.poetry.dependencies]
# When this range changes, make sure that the versions in .github/workflows/test.yaml matches this
python = ">=3.10, <3.13"
aws-cdk-lib = "~=2.181"
cdk8s = "~2.69.46"
constructs = "~=10.4"
cdk_remote_stack = "~=2.1"
aws-cdk-lambda-layer-kubectl-v32 = "^2.0.3"

[tool.poetry.group.dev.dependencies]
boto3-stubs = {version = "1.37.2", extras = ["rds", "secretsmanager"]}
pytest = "~=8.3"
syrupy = "~=4.8"
ruff = "^0.9.7"
mypy = "^1.15.0"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = 'py312'
line-length = 95
exclude = ["ca_cdk_constructs/eks/imports"]

[tool.ruff.lint]
# Documentation on Linting and formatting for Python projects
# https://citizensadvice.atlassian.net/wiki/spaces/OPS/pages/3991601167/Linting+and+formatting+for+Python+projects#Rulesets
ignore = ['E501']
select = ['E', 'W', 'F', 'C', 'N', 'INP001']

[[tool.mypy.overrides]]
module = [
    "publication"
]
ignore_missing_imports = true
